@@ -6,7 +6,7 @@ NAME
 SYNOPSIS
 
         use RPi::WiringPi;
-        use RPi::WiringPi::Constant qw(:all);
+        use RPi::Const qw(:all);
     
         my $pi = RPi::WiringPi->new;
     
@@ -247,7 +247,7 @@ DESCRIPTION
     Component modules do none of these things.
 
     There are a basic set of constants that can be imported. See
-    RPi::WiringPi::Constant.
+    RPi::Const.
 
     It's handy to have access to a pin mapping conversion chart. There's an
     excellent pin scheme map for reference at pinout.xyz
