@@ -4,5 +4,6 @@ use warnings;
 use Test::More;
 BEGIN { use_ok('RPi::WiringPi') };
 BEGIN { use_ok('WiringPi::API') };
+BEGIN { use_ok('WiringPi::Const') };
 
 done_testing();
