@@ -3,7 +3,7 @@ package Child;
 use warnings;
 use strict;
 
-use RPi::WiringPi::Constant;
+use RPi::Const;
 use parent 'RPi::WiringPi::LCD';
 use parent 'WiringPi::API';
 
