@@ -3,6 +3,8 @@ Revision history for Perl extension RPi::WiringPi.
 2.3621 UNREL
         - removed the test/images and images/ directory from the repo
         - renamed Util.pm to Core.pm
+        - we now use RPi::Const in replacement of RPi::WiringPi::Constant
+          (closes #52)
 
 2.3620  2017-07-13
         - worked around issue where bbdispatch/brewbuild was causing havoc on
